--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Utilities for the DIY-Smarthome",
   "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build-ts",
+    "build-ts": "tsc --build tsconfig.json"
   },
   "repository": {
     "type": "git",
