--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "devDependencies": {
     "@types/node": "^17.0.13",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "minimist": "^1.2.7"
   }
 }
